# Ray-tracing-renderer

./: .gitignore  CMakeLists.txt  README.md  cbox.json  cbox_sphere.json  command.txt  ignore.txt  rabbit.json  test.json  test.txt  todo.txt
cmake-modules/: FindOIDN.cmake  Findassimp.cmake
resources/Model/old_metal_cup/: license.txt  scene.gltf
resources/docs/: docs.qrc  help.md
resources/icons/: icons.qrc
resources/lights/: lights.qrc
resources/model/dragon/: license.txt  scene.gltf
resources/model/moss/: moss.xml
resources/scene/: cbox.json  cbox_dragon.json  cbox_rabbit.json  cbox_teapot.json  hyperion.json  stair.json
resources/scene/staircase/: stairscase.mtl
resources/scene/veach-mis/: veach-mis.mtl
resources/shader/: accum.frag  gizmo.frag  gizmo.vert  model.frag  model.vert  output.frag  pathTracing.frag  pathTracing.vert  shader.qrc  skybox.frag  skybox.vert  test.frag
resources/skybox/cubemap/Standard-Cube-Map1/: skybox.qrc
resources/translator/: translator.qrc
src/: BVH.cpp  BVHBuilder.cpp  BaseOpenGLWidget.cpp  Camera.cpp  Console.cpp  DataBuilder.cpp  EditorOpenGLWidget.cpp  EditorRenderer.cpp  Gizmo.cpp  Main.cpp  MainWindowManager.cpp  Mesh.cpp  Model.cpp  ModelListWidget.cpp  ModelLoader.cpp  OpenGLWidget.cpp  RayTracingOpenGLWidget.cpp  RayTracingRender.cpp  RayTracingRenderer.cpp  Ray_tracing_renderer.cpp  Renderer.cpp  SceneManager.cpp  Skybox.cpp  Transform.cpp  WindowActions.cpp  mainwindow.cpp  opengltest.cpp  testwindow.cpp
src/Data/: Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h
src/Manager/: DataBuilder.cpp  DataBuilder.h  MainWindowManager.cpp  MainWindowManager.h  ModelLoader.cpp  ModelLoader.h  SceneManager.cpp  SceneManager.h
src/Renderer/: Camera.cpp  Camera.h  EditorRenderer.cpp  EditorRenderer.h  Gizmo.cpp  Gizmo.h  RayTracingRenderer.cpp  RayTracingRenderer.h  RenderOption.h  Renderer.cpp  Renderer.h
src/Ui/: BaseOpenGLWidget.cpp  BaseOpenGLWidget.h  Console.cpp  Console.h  EditorOpenGLWidget.cpp  EditorOpenGLWidget.h  HelpDialog.cpp  HelpDialog.h  Inspector.cpp  Inspector.h  InspectorPage.cpp  InspectorPage.h  MaterialInspector.cpp  MaterialInspector.h  ModelListWidget.h  RayTracingOpenGLWidget.cpp  RayTracingOpenGLWidget.h  RenderOptionInspector.cpp  RenderOptionInspector.h  SkyboxInspector.cpp  SkyboxInspector.h  TransformInspector.cpp  TransformInspector.h  UIMainWindow.h  UiHelpDialog.h  UiInspector.h  UiInspectorPage.h  UiMaterialInspector.h  UiRenderOptionInspector.h  UiSkyboxInspector.h  UiTransformInspector.h  mainwindow.cpp  mainwindow.h
src/include/: BVH.cpp  BVH.h  BVHBuilder.h  BaseOpenGLWidget.h  Camera.h  Console.h  DataBuilder.h  EditorOpenGLWidget.h  EditorRenderer.h  Gizmo.h  MainWindowManager.h  Material.h  Mesh.h  Model.h  ModelListWidget.h  ModelLoader.h  OpenGlWidget.h  RayTracingOpenGLWidget.h  RayTracingRender.h  RayTracingRenderer.h  Renderer.h  SceneManager.h  Skybox.h  Transform.h  Triangle.h  WindowActions.h  mainwindow.h  testwindow.h  ui_mainwindow.h
ui/: HelpDialog.ui  HelpDialogUi.ui  Inspector.ui  InspectorPage.ui  MaterialInspector.ui  RenderOptionInspector.ui  SkyboxInspector.ui  TransformInspector.ui  mainwindow.ui
